@@ -1,3 +1,8 @@
+Wed Aug 30 15:10:09 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
+
+	* Put guards in indexergraph header file to make it empty if
+	  libxml is not available.  (For includetest)
+
 Wed Aug 30 15:10:00 BST 2000 Olly Betts
 
 	* Added guards to sleepycat headers so that they are empty if
